--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,11 @@ sudo: false
 php:
   - "7.0"
   - "5.6"
-  - "5.5"
   - "5.4"
-  - "5.3"
   - "hhvm"
 env:
   - DISABLE_FUNCTIONS=
-  - DISABLE_FUNCTIONS="gzopen"
+  #- DISABLE_FUNCTIONS="gzopen"
 matrix:
   allow_failures:
     - php: "hhvm"
