Platform/travis config (#4)
* Submodule dokuwiki

* Create .travis.yml

* Travis config

* PHP versions

* Setup Travis/Slack notification

* Update README.md

* Added Travis status images.

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ matrix:
   allow_failures:
     - php: "hhvm"
 notifications:
+  slack: hozong:haBs33ICo44odrx7iM01nBvg
 services:
   - "mysql"
   - "postgresql"
