--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "dokuwiki"]
 	path = dokuwiki
 	url = https://github.com/ViktorBodrogi/dokuwiki
+[submodule "lib/tpl/bootstrap3"]
+	path = lib/tpl/bootstrap3
+	url = https://github.com/LotarProject/dokuwiki-template-bootstrap3
