--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: php
 sudo: false
 php:
-  - "7.0"
-  - "5.6"
+  #- "7.0"
+  #- "5.6"
   - "5.4"
-  - "hhvm"
+  #- "hhvm"
 env:
   - DISABLE_FUNCTIONS=
   #- DISABLE_FUNCTIONS="gzopen"
