--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ services:
   - "postgresql"
 before_script:
   - echo "disable_functions=$DISABLE_FUNCTIONS" >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
+  - sh configure.sh
   - cp dokuwiki/_test/mysql.conf.php.dist dokuwiki/_test/mysql.conf.php
   - cp dokuwiki/_test/pgsql.conf.php.dist dokuwiki/_test/pgsql.conf.php
 script: cd dokuwiki/_test && phpunit --verbose --stderr
