Submodule "lib/plugins/sqlite"

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "lib/plugins/include"]
 	path = lib/plugins/include
 	url = https://github.com/dokufreaks/plugin-include
+[submodule "lib/plugins/sqlite"]
+	path = lib/plugins/sqlite
+	url = https://github.com/cosmocode/sqlite
