Submodule "lib/plugins/data", see #16 #19

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "lib/plugins/sqlite"]
 	path = lib/plugins/sqlite
 	url = https://github.com/cosmocode/sqlite
+[submodule "lib/plugins/data"]
+	path = lib/plugins/data
+	url = https://github.com/splitbrain/dokuwiki-plugin-data
