* Added submodule dokuwiki-plugins #28
    git submodule add https://github.com/ViktorBodrogi/dokuwiki-plugins

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "dokuwiki"]
 	path = dokuwiki
 	url = https://github.com/ViktorBodrogi/dokuwiki
+[submodule "dokuwiki-plugins"]
+	path = dokuwiki-plugins
+	url = https://github.com/ViktorBodrogi/dokuwiki-plugins
