* Update .travis.yml
* Using configure.sh

* Using relative links

* Do not test core dokuwiki, only plugins
* Add slack notification
* Add extension=sqlite.so
* Add env: DOKUWIKI=master/stable
* See #20

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,27 +6,31 @@ php:
   - "5.4"
   #- "hhvm"
 env:
-  - DISABLE_FUNCTIONS=
+  - DOKUWIKI=master
+  - DOKUWIKI=stable
+  #- DISABLE_FUNCTIONS=
   #- DISABLE_FUNCTIONS="gzopen"
 matrix:
   allow_failures:
     - php: "hhvm"
 notifications:
+  slack: hozong:haBs33ICo44odrx7iM01nBvg
 services:
   - "mysql"
   - "postgresql"
 before_script:
   - echo "disable_functions=$DISABLE_FUNCTIONS" >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
-  - cp -v dokuwiki/_test/mysql.conf.php.dist        dokuwiki/_test/mysql.conf.php
-  - cp -v dokuwiki/_test/pgsql.conf.php.dist        dokuwiki/_test/pgsql.conf.php
-  - ln -sv dokuwiki-plugins/lib/plugins/include     dokuwiki/lib/plugins/
-  - ln -sv dokuwiki-plugins/lib/plugins/sqlite      dokuwiki/lib/plugins/
-  - ln -sv dokuwiki-plugins/lib/plugins/data        dokuwiki/lib/plugins/
+  - echo "extension=sqlite.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
+  - sh configure.sh
 script:
   - cd dokuwiki/_test
-  - phpunit --verbose --stderr
+  - phpunit --verbose --stderr --group plugin_include
+  - phpunit --verbose --stderr --group plugin_data
+  - phpunit --verbose --stderr --group plugin_sqlite
+  #- cd dokuwiki/lib/plugins
+  #- ( cd include/_test  && phpunit --verbose --stderr --group plugin_include )
+  #- ( cd sqlite/_test   && phpunit --verbose --stderr --group plugin_sqlite )
+  #- ( cd data/_test     && phpunit --verbose --stderr --group plugin_data )
+  #- cd ../../_test
   - phpunit --verbose --stderr --group plugins
-  - cd ..
-  - ( cd lib/plugins/include  && phpunit --verbose --stderr --group plugin_include )
-  - ( cd lib/plugins/sqlite   && phpunit --verbose --stderr --group plugin_sqlite )
-  - ( cd lib/plugins/data     && phpunit --verbose --stderr --group plugin_data )
+  #- phpunit --verbose --stderr
