--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,19 @@
 language: php
 sudo: false
 php:
-  #- "7.0"
+  - "7.0"
   - "5.6"
   - "5.4"
-  #- "hhvm"
+  - "hhvm"
 env:
   - DOKUWIKI=master
-  #- DOKUWIKI=stable
+  - DOKUWIKI=stable
   #- DISABLE_FUNCTIONS=
   #- DISABLE_FUNCTIONS="gzopen"
 matrix:
   allow_failures:
+    - php: "7.0"
+    - php: "5.4"
     - php: "hhvm"
 notifications:
   slack: hozong:haBs33ICo44odrx7iM01nBvg
@@ -21,7 +23,7 @@ services:
 before_script:
   - echo "disable_functions=$DISABLE_FUNCTIONS" >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
   - echo "extension=sqlite.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
-  - sh configure.sh
+  - bash configure.sh
 script:
   - cd dokuwiki/_test
   - phpunit --verbose --stderr
